--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#about">About</a>
+                    <a href="#teaching">Teaching</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#books">Books</a>
+                    <a href="#code">Code</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#packages">Packages</a>
+                    <a href="#personal">Personal</a>
                 </li>
             </ul>
         </div>
@@ -74,7 +74,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-<p>Hi! I'm Hadley Wickham, the Chief Scientist at <a href="http://rstudio.com">RStudio</a>, and an Adjunct Professor of Statistics at the <a href="https://www.stat.auckland.ac.nz">University of Auckland</a>. I build tools (computational and cognitive) that make data science easier, faster, and more fun. I’m from New Zealand, but I currently live in Houston TX with my partner and two dogs.</p>
+<p>Hi! I'm Hadley Wickham, Chief Scientist at <a href="http://rstudio.com">RStudio</a>, and an Adjunct Professor of Statistics at the <a href="https://www.stat.auckland.ac.nz">University of Auckland</a>. I build tools (computational and cognitive) that make data science easier, faster, and more fun. I’m from New Zealand but I currently live in Houston, TX with my partner and two dogs.</p>
 
             </div>
         </div>
@@ -94,11 +94,11 @@
 </section>
 
 
-<section id="books">
+<section id="teaching">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-              <h2>Books</h2>
+              <h2>Teaching</h2>
               <hr />
             </div>
             <div class="col-lg-12">
@@ -109,18 +109,20 @@
               <li><p><a href="http://adv-r.had.co.nz">Advanced R</a> helps you master R as a programming language, teaching you what makes R tick.</p></li>
               <li><p><a href="http://r-pkgs.had.co.nz">R packages</a> teaches good software engineering practices for R, using packages for bundling, documenting, and testing your code.</p></li>
               </ul>
+
+              <p>I also teach in person workshops from time-to-time; see the <a href="https://www.rstudio.com/resources/training/workshops/">RStudio workshops page</a> for more details.</p>
           </div>
         </div>
     </div>
 </section>
 
-<section id="packages">
+<section id="code">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-              <h2>R packages</h2>
+              <h2>Code</h2>
               <hr />
-              <p>Most of my work is in the form of R packages, of which I’ve written a ton. You can roughly divide my work into three categories: tools for data science, tools for data import, and software engineering tools.</p>
+              <p>Most of my work is in the form of open source R code, which you can find on <a href="http://github.com/hadley/">my github</a>. You can roughly divide my work into three categories: tools for data science, tools for data import, and software engineering tools.</p>
 
             </div>
         </div>
@@ -132,7 +134,7 @@
             <li><a href="http://github.com/hadley/dplyr">dplyr</a> for manipulating data.</li>
             <li><a href="http://github.com/hadley/dplyr">tidyr</a> for tidying data.</li>
             <li><a href="http://github.com/hadley/stringr">stringr</a> for working with strings.</li>
-            <li><a href="http://github.com/hadley/stringr">lubridate</a> for working with data/times.</li>
+            <li><a href="http://github.com/hadley/stringr">lubridate</a> for working with date/times.</li>
             </ul>
             </div>
             <div class="col-md-4">
@@ -183,19 +185,17 @@
 
 <!-- Footer -->
 <footer class="text-center">
-    <div class="footer-above">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col col-sm-12">
-                    <p>
-                    <a href="mailto:hadley@rstudio.com">hadley@rstudio.com</a><br />
-                    <a href="https://twitter.com/hadleywickham">@hadleywickham</a><br />
-                    1719 Drew, Houston, TX 77004</p>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+  <div class="container">
+      <div class="row">
+          <div class="footer-col col-sm-12">
+              <p>
+              <a href="mailto:hadley@rstudio.com">hadley@rstudio.com</a><br />
+              <a href="https://twitter.com/hadleywickham">@hadleywickham</a><br />
+              1719 Drew, Houston, TX 77004</p>
+              </ul>
+          </div>
+      </div>
+  </div>
 </footer>
 
 <!-- jQuery -->
