--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
             <ul>
             <li><a href="http://ggplot2.org">ggplot2</a> for visualising data.</li>
             <li><a href="http://github.com/hadley/dplyr">dplyr</a> for manipulating data.</li>
-            <li><a href="http://github.com/hadley/dplyr">tidyr</a> for tidying data.</li>
+            <li><a href="http://github.com/hadley/tidyr">tidyr</a> for tidying data.</li>
             <li><a href="http://github.com/hadley/stringr">stringr</a> for working with strings.</li>
-            <li><a href="http://github.com/hadley/stringr">lubridate</a> for working with date/times.</li>
+            <li><a href="http://github.com/hadley/lubridate">lubridate</a> for working with date/times.</li>
             </ul>
             </div>
             <div class="col-md-4">
