Add readr. Move xml2 to bottom

--- a/index.html
+++ b/index.html
@@ -140,11 +140,12 @@
             <div class="col-md-4">
             <h3>Data import</h3>
             <ul>
-            <li><a href="http://github.com/hadley/xml2">xml2</a> for importing XML files.</li>
+            <li><a href="http://github.com/hadley/readr">readr</a> for reading .csv and fwf files.</li>
             <li><a href="http://github.com/hadley/readxl">readxl</a> for reading .xls and .xlsx files.</li>
             <li><a href="http://github.com/hadley/haven">haven</a> for SAS, SPSS, and Stata files.</li>
             <li><a href="http://github.com/hadley/httr">httr</a> for talking to web APIs.</li>
             <li><a href="http://github.com/hadley/rvest">rvest</a> for scraping websites.</li>
+            <li><a href="http://github.com/hadley/xml2">xml2</a> for importing XML files.</li>
             </ul>
             </div>
             <div class="col-md-4">
