Update RStudio workshop url

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <li><p><a href="http://r-pkgs.had.co.nz">R packages</a> teaches good software engineering practices for R, using packages for bundling, documenting, and testing your code.</p></li>
               </ul>
 
-              <p>I also teach in person workshops from time-to-time; see the <a href="https://www.rstudio.com/resources/training/workshops/">RStudio workshops page</a> for more details.</p>
+              <p>I also teach in person workshops from time-to-time; see the <a href="https://www.rstudio.com/workshops/">RStudio workshops page</a> for more details.</p>
           </div>
         </div>
     </div>
