Fix spelling mistake

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-<p>Hi! I'm Hadley Wickham, Chief Scientist at <a href="http://rstudio.com">RStudio</a>, and an Adjunct Professor of Statistics at the <a href="https://www.stat.auckland.ac.nz">University of Auckland</a>, <a href="https://datalab.stanford.edu">Stanford Unviersity</a>, and <a href="http://statistics.rice.edu">Rice University</a>. I build tools (computational and cognitive) that make data science easier, faster, and more fun. I’m from New Zealand but I currently live in Houston, TX with my partner and two dogs.</p>
+<p>Hi! I'm Hadley Wickham, Chief Scientist at <a href="http://rstudio.com">RStudio</a>, and an Adjunct Professor of Statistics at the <a href="https://www.stat.auckland.ac.nz">University of Auckland</a>, <a href="https://datalab.stanford.edu">Stanford University</a>, and <a href="http://statistics.rice.edu">Rice University</a>. I build tools (computational and cognitive) that make data science easier, faster, and more fun. I’m from New Zealand but I currently live in Houston, TX with my partner and two dogs.</p>
 
             </div>
         </div>
