Point to new version of book
Fixes hadley/adv-r#1046

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <ul>
               <li><p><a href="http://r4ds.had.co.nz">R for Data Science</a>, with Garrett Grolemund, introduces the key tools for doing data science with R.</p></li>
               <li><p><a href="http://amzn.com/0387981403?tag=ggplot2-20">ggplot2: elegant graphics for data analysis</a> shows you how to use ggplot2 to create graphics that help you understand your data.</p></li>
-              <li><p><a href="http://adv-r.had.co.nz">Advanced R</a> helps you master R as a programming language, teaching you what makes R tick.</p></li>
+              <li><p><a href="http://adv-r.hadley.nz">Advanced R</a> helps you master R as a programming language, teaching you what makes R tick.</p></li>
               <li><p><a href="http://r-pkgs.had.co.nz">R packages</a> teaches good software engineering practices for R, using packages for bundling, documenting, and testing your code.</p></li>
               </ul>
 
